Arrumeir armazenamento e cadastro de produtos

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -127,7 +127,7 @@
                 <div id="alteracao" class="caixas-nav">
                     <p class="titulo-nav">Alteração</p>
                     <ul class="itens-alt-rel">
-                        <li><a href="cadastrar_produto.html" class="link-alteracao-relatorio">Novo produto</a></li>
+                        <li><a th:href="@{/cadastrarProduto}" class="link-alteracao-relatorio">Novo produto</a></li>
                         <li><a href="dashboard.html" class="link-alteracao-relatorio">Produtos cadastrados</a></li>
                     </ul>
                 </div>
