--- a/src/main/resources/templates/atualizar_produto.html
+++ b/src/main/resources/templates/atualizar_produto.html
@@ -144,7 +144,7 @@
             <div id="cadastrar-produto">
                 <p class="titulo-cadastro">Cadastrar novo produto</p>
                 <form th:action="@{/salvarAtualizacaoProduto}" th:method="post">
-                    <input type="hidden" th:name="id" th:value="${prod.id}"></input>
+                    <input type="hidden" th:name="id" th:value="${prod.id}">
                     <div class="item-cadastro">
                         <label for="Nome">Nome</label>
                         <br>
