--- a/src/main/resources/templates/cadastrar_produto.html
+++ b/src/main/resources/templates/cadastrar_produto.html
@@ -23,14 +23,14 @@
 
                     <div id="menu">
                         <ul id="lista-menu">
-                            <li class="menu-itens"><a href="shop.html">shop</a></li>
+                            <li class="menu-itens"><a th:href="@{/shop}">shop</a></li>
                             <li class="menu-itens">arquivo</li>
                             <li class="menu-itens"><a href="sobre.html">sobre</a></li>
                         </ul>
                     </div>
 
                     <div id="logo-header">
-                        <a href="index.html">
+                        <a th:href="@{/home}">
                             <img src="imagens/logo.png" alt="" id="imagem-logo-header">
                         </a>
                     </div>
