--- a/src/main/resources/templates/login_cadastro.html
+++ b/src/main/resources/templates/login_cadastro.html
@@ -110,31 +110,31 @@
                     </form>
                 </div>
                 <div id="cadastrar" class="bloco">
-                    <form action="">
+                    <form th:method="POST" th:action="@{/armazenarUsuario}">
                         <div>
                             <p id="nao-cadastrado">Não é Cadastrado?</p>
                             <p id="entre-com-dados">Entre com seus dados</p>
                         </div>
-                        <div class="item-login-cadastro"> <label for="email-cadastro">E-mail:</label>
-                            <input type="email" name="email-cadastro" class="input-botao">
+                        <div class="item-login-cadastro"> <label for="email">E-mail:</label>
+                            <input type="email" th:name="email" class="input-botao">
                         </div>
                         <div class="item-login-cadastro"> <label for="password"> Senha</label>
-                            <input type="password" id="password" class="input-botao">
+                            <input type="password" th:name="senha" id="password" class="input-botao">
                         </div>
                         <div class="item-login-cadastro"> <label for="nome">Nome:</label>
-                            <input type="text" id="nome" class="input-botao">
+                            <input type="text" th:name="nome" id="nome" class="input-botao">
                         </div>
                         <div class="item-login-cadastro"> <label for="sobrenome">Sobrenome:</label>
-                            <input type="text" id="sobrenome" class="input-botao">
+                            <input type="text" th:name="sobrenome" id="sobrenome" class="input-botao">
                         </div>
                         <div class="item-login-cadastro"> <label for="nascimento">Data de Nascimento: </label>
-                            <input type="date" id="nascimento" class="input-botao">
+                            <input type="date" th:name="dataNascimento" id="nascimento" class="input-botao">
                         </div>
                         <div class="item-login-cadastro"> <label for="celular">Celular:</label>
-                            <input type="tel" id="celular" class="input-botao">
+                            <input type="tel" th:name="celular" id="celular" class="input-botao">
                         </div>
                         <div class="item-login-cadastro"> <label for="cpf">CPF:</label>
-                            <input type="number" id="cpf" class="input-botao">
+                            <input type="number" th:name="cpf" id="cpf" class="input-botao">
                         </div>
                         <div class="item-login-cadastro"> <label for="sexo">Sexo:</label>
                             <div id="sexo">
@@ -144,7 +144,7 @@
                                 <input type="radio" id="feminino" name="genero">
                             </div>
                         </div>
-                        <div class="item-login-cadastro"><button type="button" class="input-botao">REGISTRAR</button>
+                        <div class="item-login-cadastro"><button type="submit" class="input-botao">REGISTRAR</button>
                         </div>
                         <div class="item-login-cadastro">
                             <button type="button" class="input-botao" id="botao-google-cadastro">
