--- a/src/main/resources/templates/login_cadastro.html
+++ b/src/main/resources/templates/login_cadastro.html
@@ -128,7 +128,7 @@
                             <input type="text" th:name="sobrenome" id="sobrenome" class="input-botao">
                         </div>
                         <div class="item-login-cadastro"> <label for="nascimento">Data de Nascimento: </label>
-                            <input type="date" th:name="dataNascimento" id="nascimento" class="input-botao">
+                            <input type="date" th:name="nascimento" id="nascimento" class="input-botao">
                         </div>
                         <div class="item-login-cadastro"> <label for="celular">Celular:</label>
                             <input type="tel" th:name="celular" id="celular" class="input-botao">
