--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -48,7 +48,7 @@
                             </button>
                         </div>
                         <div id="login" class="icones-itens">
-                            <a href="login_cadastro.html">
+                            <a th:href="@{/cadastrarUsuario}">
                                 <button type="button" class="icone-botao" id="icone-palhaco-container">
                                     <img class="icone-palhaco" src="imagens/icone_palhaco01.png" alt="imagem default">
                                 </button>
