--- a/src/main/resources/templates/atualizar_usuario.html
+++ b/src/main/resources/templates/atualizar_usuario.html
@@ -1,240 +1,41 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/cadastrar_produto.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
-    <link rel="manifest" href="icon/site.webmanifest">
-    <title>KLOUN - Cadastro de Produtos</title>
+    <title>Document</title>
+    <link rel="stylesheet" th:href="@{css/pico.min.css}">
 </head>
-
 <body>
-    <div id="site">
+    <div class="container">
+        <h1>Atualizar Usuários</h1>
+        <form th:action="@{/salvarAtualizacaoUsuario}" th:method="post">
+            <input type="hidden" th:name="id" th:value="${user.id}">
+            <br>
+            <label for="email">Email:</label>
+            <input type="text" th:name="email" th:value="${user.email}">
 
-        <header>
-            <div id="container">
-                <div id="inner-container">
+            <label for="senha">Senha:</label>
+            <input type="text" th:name="senha" th:value="${user.senha}">
 
-                    <div id="menu">
-                        <ul id="lista-menu">
-                            <li class="menu-itens"><a th:href="@{/shop}">shop</a></li>
-                            <li class="menu-itens">arquivo</li>
-                            <li class="menu-itens"><a href="sobre.html">sobre</a></li>
-                        </ul>
-                    </div>
+            <label for="nome">Nome:</label>
+            <input type="text" th:name="nome" th:value="${user.nome}" readonly>
 
-                    <div id="logo-header">
-                        <a th:href="@{/home}">
-                            <img src="imagens/logo.png" alt="" id="imagem-logo-header">
-                        </a>
-                    </div>
+            <label for="sobrenome">Sobrenome:</label>
+            <input type="text" th:name="sobrenome" th:value="${user.sobrenome}" readonly> 
 
-                    <div id="icones">
-                        <input type="text" id="input-pesquisa">
-                        <div id="buscar" class="icones-itens">
-                            <button type="button" class="icone-botao">
-                                <svg xmlns="http://www.w3.org/2000/svg" height="1.5em" viewBox="0 0 512 512">
+            <label for="nascimento">Nascimento:</label>
+            <input type="text" th:name="nascimento" th:value="${user.nascimento}" readonly>
 
-                                    <path class="cor"
-                                        d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
-                                </svg>
-                            </button>
-                        </div>
-                        <div id="login" class="icones-itens">
-                            <a href="login_cadastro.html">
-                                <button type="button" class="icone-botao" id="icone-palhaco-container">
-                                    <img class="icone-palhaco" src="imagens/icone_palhaco01.png" alt="imagem default">
-                                </button>
-                            </a>
-                        </div>
-                        <div id="carrinho" class="icones-itens">
-                            <a href="carrinho.html">
-                                <button type="button" class="icone-botao">
-                                    <svg class="" xmlns="http://www.w3.org/2000/svg" height="1.5em"
-                                        viewBox="0 0 576 512">
-                                        <path class="cor"
-                                            d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z" />
-                                    </svg>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
+            <label for="cpf">CPF:</label>
+            <input type="text" th:name="cpf" th:value="${user.cpf}" readonly>
 
-        <div id="topo-dashboard">
-            <div id="logo-dashbboard">
-                <p id="titulo-dashboard">DASHBOARD</p>
-            </div>
-            <div id="area-pesquisa-dashboard">
-                <input type="search" placeholder="pesquisar produto..." id="pesquisar-dashboard">
-                <button type="button" class="botao-dashboard">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="30px"
-                        viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                        <style>
-                            svg {
-                                fill: #c6161b
-                            }
-                        </style>
-                        <path
-                            d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
-                    </svg>
-                </button>
-            </div>
-            <div id="config-conta-dashboard">
-                <div id="config-dashboard">
-                    <button type="button" class="botao-dashboard">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="30px"
-                            viewBox="0 0 640 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                            <style>
-                                svg {
-                                    fill: #c6161b
-                                }
-                            </style>
-                            <path
-                                d="M144 160A80 80 0 1 0 144 0a80 80 0 1 0 0 160zm368 0A80 80 0 1 0 512 0a80 80 0 1 0 0 160zM0 298.7C0 310.4 9.6 320 21.3 320H234.7c.2 0 .4 0 .7 0c-26.6-23.5-43.3-57.8-43.3-96c0-7.6 .7-15 1.9-22.3c-13.6-6.3-28.7-9.7-44.6-9.7H106.7C47.8 192 0 239.8 0 298.7zM320 320c24 0 45.9-8.8 62.7-23.3c2.5-3.7 5.2-7.3 8-10.7c2.7-3.3 5.7-6.1 9-8.3C410 262.3 416 243.9 416 224c0-53-43-96-96-96s-96 43-96 96s43 96 96 96zm65.4 60.2c-10.3-5.9-18.1-16.2-20.8-28.2H261.3C187.7 352 128 411.7 128 485.3c0 14.7 11.9 26.7 26.7 26.7H455.2c-2.1-5.2-3.2-10.9-3.2-16.4v-3c-1.3-.7-2.7-1.5-4-2.3l-2.6 1.5c-16.8 9.7-40.5 8-54.7-9.7c-4.5-5.6-8.6-11.5-12.4-17.6l-.1-.2-.1-.2-2.4-4.1-.1-.2-.1-.2c-3.4-6.2-6.4-12.6-9-19.3c-8.2-21.2 2.2-42.6 19-52.3l2.7-1.5c0-.8 0-1.5 0-2.3s0-1.5 0-2.3l-2.7-1.5zM533.3 192H490.7c-15.9 0-31 3.5-44.6 9.7c1.3 7.2 1.9 14.7 1.9 22.3c0 17.4-3.5 33.9-9.7 49c2.5 .9 4.9 2 7.1 3.3l2.6 1.5c1.3-.8 2.6-1.6 4-2.3v-3c0-19.4 13.3-39.1 35.8-42.6c7.9-1.2 16-1.9 24.2-1.9s16.3 .6 24.2 1.9c22.5 3.5 35.8 23.2 35.8 42.6v3c1.3 .7 2.7 1.5 4 2.3l2.6-1.5c16.8-9.7 40.5-8 54.7 9.7c2.3 2.8 4.5 5.8 6.6 8.7c-2.1-57.1-49-102.7-106.6-102.7zm91.3 163.9c6.3-3.6 9.5-11.1 6.8-18c-2.1-5.5-4.6-10.8-7.4-15.9l-2.3-4c-3.1-5.1-6.5-9.9-10.2-14.5c-4.6-5.7-12.7-6.7-19-3L574.4 311c-8.9-7.6-19.1-13.6-30.4-17.6v-21c0-7.3-4.9-13.8-12.1-14.9c-6.5-1-13.1-1.5-19.9-1.5s-13.4 .5-19.9 1.5c-7.2 1.1-12.1 7.6-12.1 14.9v21c-11.2 4-21.5 10-30.4 17.6l-18.2-10.5c-6.3-3.6-14.4-2.6-19 3c-3.7 4.6-7.1 9.5-10.2 14.6l-2.3 3.9c-2.8 5.1-5.3 10.4-7.4 15.9c-2.6 6.8 .5 14.3 6.8 17.9l18.2 10.5c-1 5.7-1.6 11.6-1.6 17.6s.6 11.9 1.6 17.5l-18.2 10.5c-6.3 3.6-9.5 11.1-6.8 17.9c2.1 5.5 4.6 10.7 7.4 15.8l2.4 4.1c3 5.1 6.4 9.9 10.1 14.5c4.6 5.7 12.7 6.7 19 3L449.6 457c8.9 7.6 19.2 13.6 30.4 17.6v21c0 7.3 4.9 13.8 12.1 14.9c6.5 1 13.1 1.5 19.9 1.5s13.4-.5 19.9-1.5c7.2-1.1 12.1-7.6 12.1-14.9v-21c11.2-4 21.5-10 30.4-17.6l18.2 10.5c6.3 3.6 14.4 2.6 19-3c3.7-4.6 7.1-9.4 10.1-14.5l2.4-4.2c2.8-5.1 5.3-10.3 7.4-15.8c2.6-6.8-.5-14.3-6.8-17.9l-18.2-10.5c1-5.7 1.6-11.6 1.6-17.5s-.6-11.9-1.6-17.6l18.2-10.5zM472 384a40 40 0 1 1 80 0 40 40 0 1 1 -80 0z" />
-                        </svg>
-                    </button>
-                </div>
-                <div id="conta-dashboard">
-                    <button type="button" class="botao-dashboard">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="30px"
-                            viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                            <style>
-                                svg {
-                                    fill: #c6161b
-                                }
-                            </style>
-                            <path
-                                d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z" />
-                        </svg>
-                    </button>
-                </div>
-            </div>
-        </div>
+            <label for="celular">Celular:</label>
+            <input type="text" th:name="celular" th:value="${user.celular}">
 
-        <div id="conteudo-dashboard">
-            <nav>
-                <div id="alteracao" class="caixas-nav">
-                    <p class="titulo-nav">Alteração</p>
-                    <ul class="itens-alt-rel">
-                        <li><a href="cadastrar_produto.html" class="link-alteracao-relatorio">Novo produto</a></li>
-                        <li><a href="dashboard.html" class="link-alteracao-relatorio">Produtos cadastrados</a></li>
-                    </ul>
-                </div>
-
-                <div id="relatorios" class="caixas-nav">
-                    <p class="titulo-nav">Relatórios</p>
-                    <ul class="itens-alt-rel">
-                        <li><a href="" class="link-alteracao-relatorio">- Relatorio 1</a></li>
-                        <li><a href="" class="link-alteracao-relatorio">- Relatorio 2</a></li>
-                        <li><a href="" class="link-alteracao-relatorio">- Relatorio 3</a></li>
-                        <li><a href="" class="link-alteracao-relatorio">- Relatorio 4</a></li>
-                    </ul>
-                </div>
-            </nav>
-
-            <div id="cadastrar-produto">
-                <p class="titulo-cadastro">Cadastrar novo produto</p>
-                <form th:action="@{/salvarAtualizacaoProduto}" th:method="post">
-                    <input type="hidden" th:name="id" th:value="${prod.id}">
-                    <div class="item-cadastro">
-                        <label for="Nome">Nome</label>
-                        <br>
-                        <input type="text" id="nome" th:name="nome" th:value="${prod.nome}" >
-                    </div>
-                    <div class="item-cadastro">
-                        <label for="descricao">Descrição</label>
-                        <br>
-                        <input type="text" id="descricao" th:name="descricao" th:value="${prod.nome}">
-                    </div>
-                    <div class="item-cadastro">
-                        <label for="preco">Preço</label>
-                        <br>
-                        <input type="number" id="preco" th:name="preco" th:value="${prod.preco}">
-                    </div>
-                    <div class="item-cadastro">
-                        <label for="ficha-tecnica">Ficha Técnica</label>
-                        <br>
-                        <textarea rows="10" id="ficha-tecnica" th:name="ficha-tecnica" th:field="${prod.descricao}"></textarea>
-                    </div>
-                    <div class="item-cadastro">
-                        <label for="catergoria">Categoria</label>
-                        <br>
-                        <select id="selecione" th:name="categoria" th:value="${prod.nome}">
-                            <option value="">Selecione</option>
-                            <option value="camiseta">Camisetas</option>
-                            <option value="bermudaShort">Bermudas e Shorts</option>
-                            <option value="calca">Calças</option>
-                            <option value="calcado">Calçados</option>
-                            <option value="jaquetaMoletom">Jaquetas e Moletons</option>
-                            <option value="acessorio">Acessórios</option>
-                            <option value="boneChape">Bonés e Chapéus</option>
-                            <option value="mochilaBolsa">Mochilas e Bolsas</option>
-                            <option value="Joia">Jóias</option>
-
-                        </select>
-                    </div>
-                    <div class="item-cadastro">
-                        <label for="imagem-produto">Upload de imagem do produto</label>
-                        <br>
-                        <input type="file" th:name="imagem" id="imagem-produto">
-                    </div>
-                    <div class="item-cadastro">
-                        <button type="submit" id="botao-cadastrar">CADASTRAR</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-
-        <div id="margem-inferior"></div>
-
-
-        <footer>
-            <div id="esquerda-footer">
-                <div id="newsletter">
-                    <p>newsletter</p>
-                    <div id="newsletter-box">
-                        <input type="email" name="" id="email-newsletter" placeholder="e-mail">
-                        <button type="button" id="email-button">
-                            &#62;
-                        </button>
-
-                    </div>
-                </div>
-
-                <div id="insta">
-                    <img id="icon-insta" src="" alt="">
-                    <a id="link-insta" href="a">@kloun</a>
-                </div>
-            </div>
-
-            <div id="logo-footer">
-                <img src="imagens/palhaco-logo.png" alt="" id="palhaco-logo">
-            </div>
-
-            <div id="direita-footer">
-                <div>
-                    <p class="endereco">BRASIL</p>
-                    <p class="endereco">Itapetininga / SP</p>
-                    <p class="endereco">Jardim Jardim</p>
-                    <p class="endereco">Rua Dr. José Doutor, 1384</p>
-                </div>
-
-                <div id="fale-conosco">
-                    <a href="">Fale conosco</a>
-                </div>
-            </div>
-        </footer>
+            
+            <button type="submit">Atualizar</button>
+        </form>
     </div>
-
 </body>
-
 </html>
