--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
                     </div>
 
                     <div id="logo-header">
-                        <a href="index.html">
+                        <a th:href="@{/home}">
                             <img src="imagens/logo.png" alt="" id="imagem-logo-header">
                         </a>
                     </div>
@@ -50,7 +50,7 @@
                             </button>
                         </div>
                         <div id="login" class="icones-itens">
-                            <a href="login_cadastro.html">
+                            <a th:href="@{/cadastrarUsuario}">
                                 <button type="button" class="icone-botao" id="icone-palhaco-container">
                                     <img class="icone-palhaco" src="imagens/icone_palhaco01.png" alt="imagem default">
                                 </button>
