--- a/src/main/resources/templates/cadastrar_produto.html
+++ b/src/main/resources/templates/cadastrar_produto.html
@@ -125,8 +125,8 @@
                 <div id="alteracao" class="caixas-nav">
                     <p class="titulo-nav">Alteração</p>
                     <ul class="itens-alt-rel">
-                        <li><a href="cadastrar_produto.html" class="link-alteracao-relatorio">Novo produto</a></li>
-                        <li><a href="dashboard.html" class="link-alteracao-relatorio">Produtos cadastrados</a></li>
+                        <li><a th:href="@{/produtos}" class="link-alteracao-relatorio">Novo produto</a></li>
+                        <li><a th:href="@{/cadastrarProduto}" class="link-alteracao-relatorio">Produtos cadastrados</a></li>
                     </ul>
                 </div>
 
@@ -143,7 +143,7 @@
 
             <div id="cadastrar-produto">
                 <p class="titulo-cadastro">Cadastrar novo produto</p>
-                <form th:action="@{/armazenarProduto}" th:method="post">
+                <form th:action="@{/armazenarProduto}" th:method="post" enctype="multipart/form-data">
                     <div class="item-cadastro">
                         <label for="Nome">Nome</label>
                         <br>
