--- a/src/main/resources/templates/ver_produto01.html
+++ b/src/main/resources/templates/ver_produto01.html
@@ -91,8 +91,8 @@
                         </p>
                     </button>
                 </div>
-                <img src="imagens/camiseta01.png"
-                    alt="" id="imagem-principal">
+                <img th:src="@{/public/} + ${prod.imagem}"
+                alt="" class="imagem-produto">
                 <div id="seta-direita" class="seta">
                     <button type="button" class="botao-seta">
                         <p>
