--- a/src/main/resources/templates/cadastrar_notificacao.html
+++ b/src/main/resources/templates/cadastrar_notificacao.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" th:href="@{css/pico.min.css}">
+    <link rel="stylesheet" th:href="@{css/teste.css}">
+
+
 </head>
 <body>
     <div class="container">
