--- a/src/main/resources/templates/cadastrar_produto.html
+++ b/src/main/resources/templates/cadastrar_produto.html
@@ -157,7 +157,7 @@
                     <div class="item-cadastro">
                         <label for="preco">Preço</label>
                         <br>
-                        <input type="number" th:name="preco" id="preco">
+                        <input type="number" th:name="preco" id="preco" step="0.01">
                     </div>
                     <div class="item-cadastro">
                         <label for="ficha-tecnica">Ficha Técnica</label>
@@ -169,15 +169,15 @@
                         <br>
                         <select th:name="categoria" id="selecione">
                             <option value="">Selecione</option>
-                            <option value="camiseta">Camisetas</option>
-                            <option value="bermudaShort">Bermudas e Shorts</option>
-                            <option value="calca">Calças</option>
-                            <option value="calcado">Calçados</option>
-                            <option value="jaquetaMoletom">Jaquetas e Moletons</option>
-                            <option value="acessorio">Acessórios</option>
-                            <option value="boneChape">Bonés e Chapéus</option>
-                            <option value="mochilaBolsa">Mochilas e Bolsas</option>
-                            <option value="Joia">Jóias</option>
+                            <option value="Camisetas">Camisetas</option>
+                            <option value="Bermudas e Shorts">Bermudas e Shorts</option>
+                            <option value="Calças">Calças</option>
+                            <option value="Calçados">Calçados</option>
+                            <option value="Jaquetas e Moletons">Jaquetas e Moletons</option>
+                            <option value="Acessórios">Acessórios</option>
+                            <option value="Bonés e Chapéus">Bonés e Chapéus</option>
+                            <option value="Mochilas e Bolsas">Mochilas e Bolsas</option>
+                            <option value="Jóias">Jóias</option>
 
                         </select>
                     </div>
