--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -115,10 +115,9 @@
                 <h3 class="name">
                     <a th:href="@{/detalhesProduto(id=${prod.id})}" th:text="${prod.nome}"></a>
                 </h3>
-                <p class="price" data-update-price="" th:text="${prod.preco}"></p>
-                <p class="parcels">
-                    CALCULAR PARCELAS COM JAVA
-                </p>
+                <p id="preco-produto" th:utext="'<s>' + 'R$ ' + ${prod.preco} + '</s>'"></p>
+                <p id="preco-produto" th:text="'R$ ' + ${prod.aplicarDesconto(10)} + ' à vista'"></p>
+                <p class="parcels"  th:text="${prod.calcularParcelas(2)}"></p>
             </div>
         </div>
     </div>
