--- a/src/main/resources/templates/notificacao/atualizar_notificacao.html
+++ b/src/main/resources/templates/notificacao/atualizar_notificacao.html
@@ -14,11 +14,23 @@
         <form th:action="@{/salvarAtualizacaoNotificacao}" th:method="post">
             <input type="hidden" th:name="id" th:value="${notificacao.id}">
             <br>
-            <label for="tipo">Tipo:</label>
-            <input type="text" th:name="tipo" th:value="${notificacao.tipo}">
+            <label for="tipo">Tipo de Notificação</label>
+            <select th:name="tipo" id="selecione" th:value="${notificacao.tipo}">
+                <option value="">Selecione</option>
+                <option value="Novidades">Novidades</option>
+                <option value="Promoções">Promoções</option>
+                <option value="Melhorias">Melhorias</option>
+                <option value="Alerta">Alerta</option>
+                <option value="Eventos">Eventos</option>
+            </select>   
 
-            <label for="prioridade">Prioridade:</label>
-            <input type="text" th:name="prioridade" th:value="${notificacao.prioridade}">
+            <label for="prioridade">Nível de Prioridade</label>
+            <select th:name="prioridade" id="selecione" th:value="${notificacao.prioridade}">
+                <option value="">Selecione</option>
+                <option value="Alta">Alta</option>
+                <option value="Média">Média</option>
+                <option value="Baixa">Baixa</option>
+            </select> 
 
             <label for="mensagem">Mensagem:</label>
             <input type="text" th:name="mensagem" th:value="${notificacao.mensagem}" readonly>
