arrumei categorias e dashboard que estavam invadindo o footer. arrumei também o dashboard que indicava o estoque

--- a/src/main/resources/static/css/cadastrar_produto.css
+++ b/src/main/resources/static/css/cadastrar_produto.css
@@ -48,7 +48,9 @@
 
 #conteudo-dashboard {
     display: flex;
-    background-color: rgb(198, 22, 27);
+    background-color: beige;
+    max-height: calc(100vh - 200px);
+    overflow: auto;
 }
 
 nav {
